Se implementa nueva main para poder separar por opciones (la tarea y playlist tienen su propio main)