@@ -1,82 +1,48 @@
-
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
- */
 package src;
-import java.util.ArrayList;
-import java.util.Scanner;
 
 /**
- *
- * @author joacodiaz
+ * Lista de tareas sobre el TDA Lista estatica (arrays de clase).
+ * Las operaciones invalidas lanzan excepcion; Main las atrapa.
  */
 public class ListaTareas {
-    ArrayList<Tarea> tareas = new ArrayList<>();
-    Scanner scanner = new Scanner(System.in);
+    private ListaTDA tareas;
 
     public ListaTareas() {
-        tareas.add(new Tarea("Lavar los platos"));
-        tareas.add(new Tarea("Estudiar para el parcial"));
-        Tarea tareaCompletada = new Tarea("Comprar comida");
-        tareaCompletada.setCompletada(true);
-        tareas.add(tareaCompletada);
+        tareas = new ListaEstatica();
+        tareas.inicializarLista();
+        cargarDatosIniciales();
     }
-    
-    public void agregarTarea(){
-        System.out.println("Ingrese el nombre de la tarea: ");
-        String nombreTarea = scanner.nextLine();
 
-        if (nombreTarea.isBlank()) {
+    private void cargarDatosIniciales() {
+        tareas.agregarFinal(new Tarea("Estudiar TDA Lista", true));
+        tareas.agregarFinal(new Tarea("Entregar TP03"));
+        tareas.agregarFinal(new Tarea("Repasar TDA Pila y Cola"));
+    }
+
+    public void agregarTarea(String nombre) {
+        if (nombre == null || nombre.trim().isEmpty()) {
             throw new IllegalArgumentException("El nombre de la tarea no puede estar vacio");
         }
-
-        tareas.add(new Tarea(nombreTarea));
+        tareas.agregarFinal(new Tarea(nombre.trim()));
     }
 
-    public void eliminarTarea(){
-        System.out.println("Como desea eliminar la tarea?");
-        System.out.println("1. Nombre");
-        System.out.println("2. Numero en Lista");
-
-        int userInput = scanner.nextInt();
-        scanner.nextLine();
-        switch (userInput) {
-            case 1:
-                System.out.println("Ingrese el nombre: ");
-                String nombreTarea = scanner.nextLine();
-
-                Tarea tareaAEliminar = null;
-                for (Tarea t : tareas) {
-                    if (t.getNombre().equals(nombreTarea)) {
-                        tareaAEliminar = t;
-                    }
-                }
-
-                tareas.remove(tareaAEliminar);
-                break;
-            case 2: 
-                System.out.println("Ingrese el numero: ");
-                int numTarea = scanner.nextInt();
-                scanner.nextLine();
-
-                tareas.remove(numTarea - 1);
-                break;
-            default:
-                throw new AssertionError();
+    public void eliminarPorNombre(String nombre) {
+        if (nombre == null || nombre.trim().isEmpty()) {
+            throw new IllegalArgumentException("El nombre de la tarea no puede estar vacio");
         }
+        int pos = buscarPorNombre(nombre.trim());
+        if (pos == 0) {
+            throw new IllegalArgumentException("Esa tarea no existe en la lista");
+        }
+        tareas.eliminarEn(pos);
     }
 
-    public void marcarTarea(){
-        System.out.println("Ingrese el numero de la tarea a marcar: ");
-        int numTarea = scanner.nextInt();
-        scanner.nextLine();
+    public void eliminarPorNumero(int numero) {
+        tareas.eliminarEn(numero);
+    }
 
-        if (numTarea < 1 || numTarea > tareas.size()) {
-            throw new IndexOutOfBoundsException("Numero de tarea fuera de rango");
-        }
-
-        Tarea tarea = tareas.get(numTarea - 1);
+    public void marcarTarea(int numero) {
+        Tarea tarea = (Tarea) tareas.recuperar(numero);
         tarea.setCompletada(!tarea.estaCompletada());
 
         if (tarea.estaCompletada()) {
@@ -86,23 +52,25 @@ public class ListaTareas {
         }
     }
 
-    public void mostrarTareas(){
-        if (tareas.isEmpty()) {
+    public void mostrarTareas() {
+        if (tareas.listaVacia()) {
             System.out.println("No hay tareas cargadas");
             return;
         }
 
         System.out.println("--- Lista de Tareas ---");
-        for (int i = 0; i < tareas.size(); i++) {
-            System.out.println((i + 1) + ". " + tareas.get(i));
+        for (int i = 1; i <= tareas.tamanio(); i++) {
+            System.out.println(i + ". " + tareas.recuperar(i));
         }
     }
 
-    public ArrayList<Tarea> getTareas() {
-        return tareas;
-    }
-
-    public void setTareas(ArrayList<Tarea> tareas) {
-        this.tareas = tareas;
+    private int buscarPorNombre(String nombre) {
+        for (int i = 1; i <= tareas.tamanio(); i++) {
+            Tarea t = (Tarea) tareas.recuperar(i);
+            if (t.getNombre().equals(nombre)) {
+                return i;
+            }
+        }
+        return 0;
     }
 }
